Toevoegen van Models, ViewModels, Views, Home en Shared folders

--- a/WebApp-Project/WebApp-Project/appsettings.json
+++ b/WebApp-Project/WebApp-Project/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "StudentConnection": "Server=baker.local.thomasmore.be\\GSQLEDU01,45001;Database=r0781813;Trusted_Connection=False;User Id=r0781813;Password=Applesap2000",
+    "LocalDBConnection": "Server=(localdb)\\mssgllocaldb;Database=EfCoreLocal;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
