--- a/WebApp-Project/WebApp-Project/WebApp-Project.csproj
+++ b/WebApp-Project/WebApp-Project/WebApp-Project.csproj
@@ -5,4 +5,12 @@
     <RootNamespace>WebApp_Project</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+  </ItemGroup>
+
 </Project>
